--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,25 +1,44 @@
-name: Generate Snake
+name: Generate Snake Animation
 
+# Controls when the workflow will run
 on:
+  # Runs every 12 hours
   schedule:
-    - cron: "0 */12 * * *"  # every 12 hours
+    - cron: "0 */12 * * *"
+  
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  
+  # Run on every push to main branch
+  push:
+    branches:
+      - main
 
+# Jobs to run
 jobs:
-  build:
+  generate:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
+    
     steps:
-      - uses: actions/checkout@v3
+      # Checkout the repository
+      - name: Checkout
+        uses: actions/checkout@v3
       
-      - uses: Platane/snk@v3
+      # Generate the snake animation
+      - name: Generate github-contribution-grid-snake.svg
+        uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: YOUR_GITHUB_USERNAME
+          github_user_name: ${{ github.repository_owner }}
           outputs: |
+            dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
             
-      - name: Push changes
-        uses: ad-m/github-push-action@master
+      # Push the generated files to the output branch
+      - name: Push to output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: output
-          force: true
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
